front: touching up front end pages, refactored roles permissions page, fix endpoints

--- a/new-frontend/translations/en.json
+++ b/new-frontend/translations/en.json
@@ -33,6 +33,23 @@
         "member": "Member",
         "updateRole": "Save Role",
         "noPermission": "You do not have permission to view roles and permissions.",
+        "subtitle": "Manage user roles and their associated permissions",
+        "roles": "Roles",
+        "selectRoleDesc": "Select a role to view and edit its permissions",
+        "selectRolePrompt": "Please select a role from the left panel",
+        "permissionsAssigned": "permissions",
+        "clearSearch": "Clear search",
+        "saveChanges": "Save Changes",
+        "saving": "Saving...",
+        "changesSaved": "Changes saved successfully!",
+        "saveFailed": "Failed to save changes",
+        "contactAdmin": "Please contact your administrator for access",
+        "noPermissionsFound": "No permissions found matching your search",
+        "unsavedChangesWarning": "You have unsaved changes. Are you sure you want to switch roles?",
+        "toBeAdded": "To be added",
+        "toBeRemoved": "To be removed",
+        "fetchError": "Failed to load roles and permissions",
+        "searchPermissions": "Search permissions...",
         "permissionGroups": {
             "FARM": "Farm Management",
             "FIELD": "Fields",
@@ -128,7 +145,11 @@
         "description": "Description",
         "enterDescription": "Enter equipment description",
         "createButton": "Create Equipment",
+        "creating": "Creating...",
         "noPermission": "You do not have permission to create equipment on this farm.",
+        "fieldsRequired": "Equipment name and type are required",
+        "createSuccess": "Equipment created successfully",
+        "createError": "Failed to create equipment",
         
         "myEquipment": "My Equipment",
         "searchPlaceholder": "Search by name...",
@@ -147,7 +168,21 @@
         "deleteSuccess": "Deleted equipment: {name}",
         "deleteError": "Failed to delete equipment.",
         "unknown": "Unknown",
-        "noPermissionView": "You do not have permission to view equipment."
+        "noPermissionView": "You do not have permission to view equipment.",
+        "noEquipmentFound": "No equipment found.",
+        "edit": "Edit Equipment",
+    
+    "types": {
+        "Tractor": "Tractor",
+        "Combine Harvester": "Combine Harvester",
+        "Sprayer": "Sprayer",
+        "Cultivator": "Cultivator",
+        "Seeder": "Seeder",
+        "Plow": "Plow",
+        "Trailer": "Trailer",
+        "Fertilizer Spreader": "Fertilizer Spreader",
+        "Other": "Other Equipment"
+        }
     },
     "fields": {
         "title": "Create a Field",
@@ -173,6 +208,46 @@
         "searchPlaceholder": "Search fields by name",
         "fetchFieldsError": "Failed to fetch fields.",
         "moreInfo": "More Info"
+    },
+    "fieldsMap": {
+        "title": "Farm Fields Map View",
+        "filterByLabel": "Filter Fields",
+        "filterByCrop": "Filter by Crop Type",
+        "createNewField": "Create New Field",
+        "myLocation": "My Location",
+        "locating": "Locating...",
+        "weatherOn": "Weather On",
+        "weatherOff": "Weather Off",
+        "fieldsDisplayed": "fields displayed",
+        "filteredFrom": "filtered from",
+        "fieldInfo": "Field Information",
+        "fieldName": "Name",
+        "area": "Area",
+        "perimeter": "Perimeter",
+        "currentCrop": "Current Crop",
+        "notSpecified": "Not specified",
+        "weatherConditions": "Weather Conditions",
+        "temperature": "Temperature",
+        "conditions": "Conditions",
+        "wind": "Wind",
+        "humidity": "Humidity",
+        "recentActivity": "Recent Activity",
+        "noRecentActivities": "No recent activities found for this field.",
+        "createTask": "Create Task",
+        "viewDetails": "View Details",
+        "inspectField": "Inspect Field",
+        "close": "Close",
+        "fieldDetails": "Field Details",
+        "hectares": "hectares",
+        "meters": "meters",
+        "total": "total",
+        "failedToFetchFields": "Failed to fetch fields.",
+        "failedToLoadCropOptions": "Failed to load crop options.",
+        "locationFound": "Location found!",
+        "locationError": "Unable to retrieve your location.",
+        "geolocationNotSupported": "Geolocation is not supported by your browser",
+        "failedToLoadWeather": "Failed to load weather data.",
+        "noPermission": "You do not have permission to view fields."
     },
     "tasks": {
         "title": "Create a Task",
@@ -202,8 +277,15 @@
         "viewTask": "View Task",
         "taskStatusPending": "Pending",
         "taskStatusCompleted": "Completed",
-        "taskStatusCanceled": "Cancel",
-        "all": "All"
+        "taskStatusCanceled": "Canceled",
+        "all": "All",
+        "tasks": "Tasks",
+        "pageTitle": "Task Management",
+        "noTaskFound": "No tasks found",
+        "filterByStatus": "Filter by status",
+        "seasonFilter": "Season filter",
+        "taskDetails": "Task details",
+        "taskActions": "Task actions"
     },
     "cropHealth": {
         "title": "Crop Health Diagnosis (AI)",
