--- a/new-frontend/translations/lt.json
+++ b/new-frontend/translations/lt.json
@@ -33,6 +33,23 @@
         "member": "Narys",
         "updateRole": "Išsaugoti Rolę",
         "noPermission": "Jūs neturite teisės peržiūrėti rolių ir leidimų.",
+        "subtitle": "Tvarkyti naudotojų roles ir jų asocijuotas teises",
+        "roles": "Rolės",
+        "selectRoleDesc": "Pasirinkite rolę, kad peržiūrėtumėte ir redaguotumėte leidimus",
+        "selectRolePrompt": "Pasirinkite rolę iš kairiojo skydelio",
+        "permissionsAssigned": "leidimai",
+        "searchPermissions": "Ieškoti leidimų...",
+        "clearSearch": "Išvalyti paiešką",
+        "saveChanges": "Išsaugoti pakeitimus",
+        "saving": "Saugoma...",
+        "changesSaved": "Pakeitimai sėkmingai išsaugoti!",
+        "saveFailed": "Nepavyko išsaugoti pakeitimų",
+        "contactAdmin": "Susisiekite su administratoriumi dėl prieigos",
+        "noPermissionsFound": "Nerasta leidimų atitinkančių jūsų paiešką",
+        "unsavedChangesWarning": "Turite neišsaugotų pakeitimų. Ar tikrai norite pakeisti rolę?",
+        "toBeAdded": "Bus pridėta",
+        "toBeRemoved": "Bus pašalinta",
+        "fetchError": "Nepavyko įkelti rolių ir leidimų",
         "permissionGroups": {
             "FARM": "Ūkio valdymas",
             "FIELD": "Laukai",
@@ -120,16 +137,20 @@
         }
     },
     "equipment": {
-        "title": "Sukurti Įrangą",
+        "title": "Sukurti įrangą",
         "equipmentName": "Įrangos pavadinimas",
         "enterEquipmentName": "Įveskite įrangos pavadinimą",
         "selectEquipmentType": "Pasirinkite įrangos tipą",
         "selectType": "Pasirinkite įrangos tipą",
         "description": "Aprašymas",
         "enterDescription": "Įveskite įrangos aprašymą",
-        "createButton": "Sukurti Įrangą",
-        "noPermission": "Neturite leidimo sukurti įrangą šiame ūkyje.",
-
+        "createButton": "Sukurti įrangą",
+        "creating": "Kuriama...",
+        "noPermission": "Jūs neturite teisių kurti įrangą šiame ūkyje.",
+        "fieldsRequired": "Įrangos pavadinimas ir tipas yra privalomi",
+        "createSuccess": "Įranga sėkmingai sukurta",
+        "createError": "Nepavyko sukurti įrangos",
+        
         "myEquipment": "Mano įranga",
         "searchPlaceholder": "Ieškoti pagal pavadinimą...",
         "filterByType": "Filtruoti pagal tipą",
@@ -147,7 +168,21 @@
         "deleteSuccess": "Ištrinta įranga: {name}",
         "deleteError": "Nepavyko ištrinti įrangos.",
         "unknown": "Nežinomas",
-        "noPermissionView": "Neturite leidimo peržiūrėti įrangą."
+        "noPermissionView": "Jūs neturite teisių peržiūrėti įrangą.",
+        "noEquipmentFound": "Nerasta jokios įrangos.",
+        "edit": "Redaguoti įrangą",
+    
+    "types": {
+        "Tractor": "Traktorius",
+        "Combine Harvester": "Kombainas",
+        "Sprayer": "Purkštuvas",
+        "Cultivator": "Kultivatorius",
+        "Seeder": "Sėjamoji",
+        "Plow": "Plūgas",
+        "Trailer": "Priekaba",
+        "Fertilizer Spreader": "Trąšų barstytuvas",
+        "Other": "Kita įranga"
+        }
     },
     "fields": {
         "title": "Sukurti Lauką",
@@ -174,36 +209,83 @@
         "fetchFieldsError": "Nepavyko gauti laukų duomenų.",
         "moreInfo": "Daugiau informacijos"
     },
+    "fieldsMap": {
+        "title": "Laukų žemėlapis",
+        "filterByLabel": "Filtruoti laukus",
+        "filterByCrop": "Filtruoti pagal pasėlių tipą",
+        "createNewField": "Kurti naują lauką",
+        "myLocation": "Mano vieta",
+        "locating": "Ieškoma vietos...",
+        "weatherOn": "Orai įjungti",
+        "weatherOff": "Orai išjungti",
+        "fieldsDisplayed": "rodoma laukų",
+        "filteredFrom": "filtruota iš viso",
+        "fieldInfo": "Lauko informacija",
+        "fieldName": "Pavadinimas",
+        "area": "Plotas",
+        "perimeter": "Perimetras",
+        "currentCrop": "Dabartinis pasėlis",
+        "notSpecified": "Nenurodyta",
+        "weatherConditions": "Oro sąlygos",
+        "temperature": "Temperatūra",
+        "conditions": "Sąlygos",
+        "wind": "Vėjas",
+        "humidity": "Drėgmė",
+        "recentActivity": "Naujausi veiksmai",
+        "noRecentActivities": "Nerasta naujausių veiksmų šiam laukui.",
+        "createTask": "Sukurti užduotį",
+        "viewDetails": "Peržiūrėti informaciją",
+        "inspectField": "Tikrinti lauką",
+        "close": "Uždaryti",
+        "fieldDetails": "Lauko informacija",
+        "hectares": "hektarai",
+        "meters": "metrai",
+        "total": "viso",
+        "failedToFetchFields": "Nepavyko gauti laukų duomenų.",
+        "failedToLoadCropOptions": "Nepavyko užkrauti pasėlių tipų.",
+        "locationFound": "Vieta rasta!",
+        "locationError": "Nepavyko nustatyti jūsų vietos.",
+        "geolocationNotSupported": "Jūsų naršyklė nepalaiko geolokacijos.",
+        "failedToLoadWeather": "Nepavyko užkrauti orų duomenų.",
+        "noPermission": "Jūs neturite teisių peržiūrėti laukus."
+    },
     "tasks": {
-        "title": "Sukurti Užduotį",
-        "taskType": "Užduoties Tipas",
-        "selectTaskType": "Pasirinkite Užduoties Tipą",
+        "title": "Sukurti užduotį",
+        "taskType": "Užduoties tipas",
+        "selectTaskType": "Pasirinkite užduoties tipą",
         "description": "Aprašymas",
-        "taskStatus": "Užduoties Būsena",
-        "selectTaskStatus": "Pasirinkite Užduoties Būseną",
+        "taskStatus": "Užduoties būsena",
+        "selectTaskStatus": "Pasirinkite užduoties būseną",
         "field": "Laukas",
-        "selectField": "Pasirinkite Lauką",
+        "selectField": "Pasirinkite lauką",
         "season": "Sezonas",
         "allSeasons": "Visi sezonai",
         "date": "Data",
-        "dueDate": "Termino Data",
-        "completedDate": "Atlikimo Data",
-        "selectEquipment": "Pasirinkite Įrangą",
-        "recommendedDate": "Rekomenduojama data šiai užduočiai",
+        "dueDate": "Terminas",
+        "completedDate": "Užbaigimo data",
+        "selectEquipment": "Pasirinkite įrangą",
+        "recommendedDate": "Rekomenduojama data",
         "useRecommendedDate": "Naudoti rekomenduojamą datą",
-        "createTask": "Sukurti Užduotį",
-        "noPermission": "Jūs neturite teisės kurti užduotis.",
+        "createTask": "Sukurti užduotį",
+        "noPermission": "Jūs neturite teisių kurti užduotis.",
         "startRecording": "Pradėti įrašymą",
-        "stopRecording": "Stabdyti įrašymą",
+        "stopRecording": "Baigti įrašymą",
         "processingVoice": "Apdorojamas balso įrašas...",
-        "noTasksAvailable": "Nėra užduočių.",
+        "noTasksAvailable": "Užduočių nėra.",
         "fetchTasksError": "Nepavyko gauti užduočių.",
         "fetchSeasonsError": "Nepavyko įkelti sezonų.",
         "viewTask": "Peržiūrėti užduotį",
         "taskStatusPending": "Suplanuotos",
-        "taskStatusCompleted": "Atliktos",
+        "taskStatusCompleted": "Užbaigtos",
         "taskStatusCanceled": "Atšauktos",
-        "all": "Visos"
+        "all": "Visos",
+        "tasks": "Užduotys",
+        "pageTitle": "Užduočių valdymas",
+        "noTaskFound": "Nerasta užduočių",
+        "filterByStatus": "Filtruoti pagal būseną",
+        "seasonFilter": "Sezonų filtras",
+        "taskDetails": "Užduoties detalės",
+        "taskActions": "Užduoties veiksmai"
     },
     "cropHealth": {
         "title": "Pasėlių Sveikatos Diagnozė (AI)",
