front: refactored dashboard, fields, crop-health pages with better UI/UX

--- a/new-frontend/translations/en.json
+++ b/new-frontend/translations/en.json
@@ -17,12 +17,33 @@
         "completed": "Completed",
         "notDone": "Not done",
         "totalFieldArea": "Total Field Area",
-        "tasksTimeline": "Tasks timeline",
+        "tasksTimeline": "Tasks Timeline",
         "task": "Task",
         "status": "Status",
         "date": "Date",
         "due": "Due",
-        "view": "View"
+        "view": "View",
+        "loading": "Loading dashboard data...",
+        "welcomeMessage": "Welcome to Your Farm Dashboard",
+        "todayDate": "Today's date",
+        "totalFields": "Total Fields",
+        "fetchTasksError": "Failed to fetch tasks.",
+        "fetchStatsError": "Failed to fetch task statistics.",
+        "fetchFieldsError": "Failed to fetch field data.",
+        "aiInsightError": "Failed to load AI insight.",
+        "weatherError": "Failed to load weather data."
+    },
+    "weather": {
+        "title": "Weather",
+        "temperature": "Temperature",
+        "humidity": "Humidity",
+        "wind": "Wind",
+        "conditions": "Conditions",
+        "sunrise": "Sunrise",
+        "sunset": "Sunset",
+        "loadingWeather": "Loading weather data...",
+        "noWeatherData": "No weather data available.",
+        "fetchWeatherError": "Failed to fetch weather data."
     },
     "roles": {
         "title": "Roles & Permissions",
@@ -194,7 +215,7 @@
         "area": "Area",
         "perimeter": "Perimeter",
         "createButton": "Create Field",
-        "noPermission": "You do not have permission to create fields.",
+        "noPermission": "You do not have permission to view fields.",
         "ha": "ha",
         "m": "m",
         "fieldLoadError": "Failed to load field data.",
@@ -207,7 +228,32 @@
         "myFields": "My Fields",
         "searchPlaceholder": "Search fields by name",
         "fetchFieldsError": "Failed to fetch fields.",
-        "moreInfo": "More Info"
+        "moreInfo": "More Info",
+        "viewOnMap": "View on Map",
+        "allCrops": "All Crops",
+        "filterByCrop": "Filter by Crop",
+        "currentCrop": "Current Crop",
+        "totalArea": "Total Area",
+        "noFieldsFound": "No Fields Found",
+        "noFieldsDescription": "There are no fields that match your criteria. Try changing your filters or create a new field.",
+        "createFirstField": "Create Your First Field",
+        "notSpecified": "Not specified",
+        "fieldOverview": "Field Overview",
+        "taskStatistics": "Task Statistics",
+        "currentWeather": "Current Weather",
+        "humidity": "Humidity",
+        "wind": "Wind",
+        "soilInformation": "Soil Information",
+        "soilType": "Soil Type",
+        "soilPh": "pH",
+        "organicMatter": "Organic Matter",
+        "fertility": "Fertility",
+        "drainage": "Drainage",
+        "lastTested": "Last Tested",
+        "openInGoogleMaps": "Open in Google Maps",
+        "backToFields": "Back to Fields",
+        "lastUpdated": "Last Updated",
+        "deleteFieldWarning": "This action cannot be undone. All tasks associated with this field will remain in the system but will no longer be linked to a field."
     },
     "fieldsMap": {
         "title": "Farm Fields Map View",
@@ -267,7 +313,7 @@
         "recommendedDate": "Recommended date for this task",
         "useRecommendedDate": "Use recommended date",
         "createTask": "Create Task",
-        "noPermission": "You do not have permission to create tasks.",
+        "noPermission": "You do not have permission to view tasks.",
         "startRecording": "Start recording",
         "stopRecording": "Stop recording",
         "processingVoice": "Processing voice input...",
@@ -285,7 +331,12 @@
         "filterByStatus": "Filter by status",
         "seasonFilter": "Season filter",
         "taskDetails": "Task details",
-        "taskActions": "Task actions"
+        "taskActions": "Task actions",
+        "total": "Total",
+        "completed": "Completed", 
+        "pending": "Pending",
+        "canceled": "Canceled",
+        "noDescription": "No description provided"
     },
     "cropHealth": {
         "title": "Crop Health Diagnosis (AI)",
@@ -307,7 +358,24 @@
         "yes": "Yes",
         "no": "No",
         "healthy": "Healthy",
-        "unhealthy": "Unhealthy"
+        "unhealthy": "Unhealthy",
+        "loading": "Loading crop health page...",
+        "analyzing": "Analyzing your crop image...",
+        "noImageUploaded": "No image uploaded yet",
+        "uploadInstruction": "Upload a crop image to get disease analysis",
+        "readyToAnalyze": "Image ready for analysis",
+        "startAnalysis": "Start Analysis",
+        "taskPrepared": "Task prepared. Redirecting to task creation...",
+        "needFieldsWarning": "You need to create fields first before creating a task",
+        "descriptionError": "Failed to generate task description",
+        "analysisError": "Failed to analyze the plant",
+        "selectFieldWarning": "Please select a field",
+        "noDiseasesDetected": "No diseases detected. Your plant looks healthy!",
+        "submittedOn": "Analyzed on",
+        "fetchFieldsError": "Failed to load fields",
+        "fieldSelectionHelp": "Select a field where this disease was detected:",
+        "noFieldsAvailable": "You don't have any fields yet",
+        "createField": "Create Field"
     },
     "farmMembers": {
         "title": "Farm Members",
