--- a/new-frontend/translations/lt.json
+++ b/new-frontend/translations/lt.json
@@ -17,12 +17,25 @@
         "completed": "Atlikta",
         "notDone": "Neatlikta",
         "totalFieldArea": "Bendras Laukų Plotas",
-        "tasksTimeline": "Užduočių laiko juosta",
+        "tasksTimeline": "Užduočių Laiko Juosta",
         "task": "Užduotis",
         "status": "Būsena",
         "date": "Data",
         "due": "Terminas",
-        "view": "Peržiūrėti"
+        "view": "Peržiūrėti",
+        "loading": "Kraunami duomenys...",
+        "welcomeMessage": "Sveiki atvykę į jūsų ūkio valdymo skydelį",
+        "todayDate": "Šiandienos data",
+        "totalFields": "Viso laukų",
+        "fetchTasksError": "Nepavyko gauti užduočių.",
+        "fetchStatsError": "Nepavyko gauti užduočių statistikos.",
+        "fetchFieldsError": "Nepavyko gauti laukų duomenų.",
+        "aiInsightError": "Nepavyko įkelti AI įžvalgų.",
+        "weatherError": "Nepavyko gauti orų duomenų.",
+        "noTasks": "Užduočių nėra.",
+        "noFields": "Laukų nėra.",
+        "createTask": "Sukurti užduotį",
+        "createField": "Sukurti lauką"
     },
     "roles": {
         "title": "Rolės ir Leidimai",
@@ -194,7 +207,7 @@
         "area": "Plotas",
         "perimeter": "Perimetras",
         "createButton": "Sukurti Lauką",
-        "noPermission": "Jūs neturite teisės kurti laukus.",
+        "noPermission": "Jūs neturite teisės peržiūrėti laukus.",
         "ha": "ha",
         "m": "m",
         "fieldLoadError": "Nepavyko įkelti lauko duomenų.",
@@ -207,7 +220,32 @@
         "myFields": "Mano Laukai",
         "searchPlaceholder": "Ieškoti laukų pagal pavadinimą",
         "fetchFieldsError": "Nepavyko gauti laukų duomenų.",
-        "moreInfo": "Daugiau informacijos"
+        "moreInfo": "Daugiau informacijos",
+        "viewOnMap": "Žiūrėti žemėlapyje",
+        "allCrops": "Visi pasėliai",
+        "filterByCrop": "Filtruoti pagal pasėlį",
+        "currentCrop": "Dabartinis pasėlis",
+        "totalArea": "Bendras plotas",
+        "noFieldsFound": "Laukų nerasta",
+        "noFieldsDescription": "Nėra laukų, atitinkančių jūsų kriterijus. Pabandykite pakeisti filtrus arba sukurkite naują lauką.",
+        "createFirstField": "Sukurkite savo pirmąjį lauką",
+        "notSpecified": "Nenurodyta",
+        "fieldOverview": "Lauko apžvalga",
+        "taskStatistics": "Užduočių statistika",
+        "currentWeather": "Dabartiniai orai",
+        "humidity": "Drėgmė",
+        "wind": "Vėjas",
+        "soilInformation": "Dirvožemio informacija",
+        "soilType": "Dirvožemio tipas",
+        "soilPh": "pH",
+        "organicMatter": "Organinė medžiaga",
+        "fertility": "Derlingumas",
+        "drainage": "Drenažas",
+        "lastTested": "Paskutinis tyrimas",
+        "openInGoogleMaps": "Atidaryti Google Maps",
+        "backToFields": "Grįžti į laukus",
+        "lastUpdated": "Paskutinis atnaujinimas",
+        "deleteFieldWarning": "Šio veiksmo nebus galima atšaukti. Visos su šiuo lauku susijusios užduotys liks sistemoje, bet nebebus susietos su lauku."
     },
     "fieldsMap": {
         "title": "Laukų žemėlapis",
@@ -267,7 +305,7 @@
         "recommendedDate": "Rekomenduojama data",
         "useRecommendedDate": "Naudoti rekomenduojamą datą",
         "createTask": "Sukurti užduotį",
-        "noPermission": "Jūs neturite teisių kurti užduotis.",
+        "noPermission": "Jūs neturite teisių peržiūrėti užduotis.",
         "startRecording": "Pradėti įrašymą",
         "stopRecording": "Baigti įrašymą",
         "processingVoice": "Apdorojamas balso įrašas...",
@@ -285,13 +323,21 @@
         "filterByStatus": "Filtruoti pagal būseną",
         "seasonFilter": "Sezonų filtras",
         "taskDetails": "Užduoties detalės",
-        "taskActions": "Užduoties veiksmai"
+        "taskActions": "Užduoties veiksmai",
+        "total": "Iš viso",
+        "completed": "Atlikta", 
+        "pending": "Laukiančios",
+        "canceled": "Atšauktos",
+        "noDescription": "Aprašymas nepateiktas"
     },
     "cropHealth": {
         "title": "Pasėlių Sveikatos Diagnozė (AI)",
         "subtitle": "Įkelkite augalo ar pasėlio nuotrauką ir gaukite dirbtinio intelekto pasiūlytą diagnozę.",
+        "uploadSection": "Įkelti nuotrauką",
         "chooseCropImage": "Pasirinkite Pasėlio Nuotrauką",
+        "acceptedFormats": "Priimami formatai: JPG, PNG, iki 10MB",
         "analyze": "Analizuoti",
+        "preview": "Nuotraukos peržiūra",
         "diagnosisReport": "Diagnozės Ataskaita",
         "plantDetected": "Augalas Aptiktas",
         "healthStatus": "Sveikatos Būklė",
@@ -307,7 +353,24 @@
         "yes": "Taip",
         "no": "Ne",
         "healthy": "Sveikas",
-        "unhealthy": "Nesveikas"
+        "unhealthy": "Nesveikas",
+        "loading": "Kraunamas pasėlių sveikatos puslapis...",
+        "analyzing": "Analizuojama jūsų pasėlio nuotrauka...",
+        "noImageUploaded": "Dar neįkelta nuotrauka",
+        "uploadInstruction": "Įkelkite pasėlio nuotrauką, kad gautumėte ligos analizę",
+        "readyToAnalyze": "Nuotrauka paruošta analizei",
+        "startAnalysis": "Pradėti analizę",
+        "taskPrepared": "Užduotis paruošta. Nukreipiama į užduoties kūrimą...",
+        "needFieldsWarning": "Turite sukurti laukus prieš kurdami užduotį",
+        "descriptionError": "Nepavyko sugeneruoti užduoties aprašymo",
+        "analysisError": "Nepavyko išanalizuoti augalo",
+        "selectFieldWarning": "Prašome pasirinkti lauką",
+        "noDiseasesDetected": "Ligų nerasta. Jūsų augalas atrodo sveikas!",
+        "submittedOn": "Išanalizuota",
+        "fetchFieldsError": "Nepavyko įkelti laukų",
+        "fieldSelectionHelp": "Pasirinkite lauką, kuriame buvo aptikta ši liga:",
+        "noFieldsAvailable": "Jūs dar neturite jokių laukų",
+        "createField": "Sukurti Lauką"
     },
     "farmMembers": {
         "title": "Ūkio nariai",
